tests/programs/errors/variadic_extern.flow
extern fn printf(..args:string):int

fn main():int {
    return 0
}
